# era

./: CMakeLists.txt  Messages.sh
data/: project.appdata.xml  project.desktop
src/: CMakeLists.txt
src/assets/: assets.qrc
src/code/: main.cpp
src/controls/: AnalogClock.qml  ArchivePage.qml  DigitalClock.qml  Stopwatch.qml  main.qml  qml.qrc
src/controls/previewer/: FilePreviewer.qml
